@@ -1,4 +1,6 @@
 * set SO_REUSEPORT if available
+* add an option to rotate on an interval (specified with '-i <secs>'), this
+uses setitimer() internally
 
 Version 0.2.0 (anthonym)
 * actually make mondemand stats correct (lots of double counting happening)
